--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
     "module": "CommonJS",
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "outDir": "./build",
-    "strict": true
+    "target": "ES2021",
+    "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
