--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "get-port": "^7.1.0",
+    "jest-mock-extended": "^3.0.7",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
     "uuid": "^9.0.1"
@@ -18,7 +20,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
   }
