--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "http-status-codes": "^2.3.0",
     "jest-mock-extended": "^3.0.7",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
